samples/_failures_safe/1761095294_b277fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8705a2a1.c: In function ‘main’:
./samples/SAFE/__tmp_8705a2a1.c:147:5: error: expected declaration or statement at end of input
  147 |     }
      |     ^
